# structgentor

./: .gitignore  LICENSE  README.md  pyproject.toml
structgentor/: __init__.py  main.py
structgentor/cli/: commands.py
structgentor/core/: __init__.py  build_struct.py  scan_struct.py
structgentor/utils/: cli_helper.py  detect_env.py  printer.py
structlab/: __init__.py  main.py
structlab/cli/: commands.py
structlab/core/: build_struct.py  scan_struct.py
structlab/utils/: __init__.py  cli_helper.py  exclude.py
